feat(core): introduce worker group (#1456)
close #565